@@ -3,6 +3,7 @@ CHANGELOG
 2013-10-15  1.3.0
 
       * synchronous flag is now false by default
+      * do not set settings if they didn't chang
 
 2013-10-15  1.2.1
 
